--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -381,7 +381,7 @@ log-level = "warn";
 # logs might still be written to the stderr.
 # When setting this option from the config file, it is recommended to use an absolute path.
 #
-log-file = "/home/murillovaz/picom.log"
+log-file = "/home/mauriciojr/picom.log"
 
 # Show all X errors (for debugging)
 # show-all-xerrors = false
