--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,4 +1,4 @@
 [xin_-1]
-file=/home/murillovaz/.wallpapers/clearoff_1.jpeg
+file=/home/mauriciojr/.wallpapers/clearoff_1.jpeg
 mode=0
 bgcolor=#000000
