--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	name = Murillo Vaz
-	email = murillo_vaz@live.com
+	name = Mauricio Junior
+	email = mauriciodmpires1@gmail.com
 [core]
 	editor = nvim
